--- a/hackathons-wiki.html
+++ b/hackathons-wiki.html
@@ -1547,7 +1547,7 @@ document.addEventListener('visibilitychange', function() {
 <li class="checklist-item">
     <div class="checklist-number">3</div>
     <div class="checklist-text">
-        <strong>Check Your Registration Status</strong> - Verify your registration for all Hack University events.<br>
+        <strong>Check Your Registration Status & Obtain Discord & GroupMe Links</strong> - Verify your registration for all Hack University events.<br>
         <div class="mt-3">
             <!-- Registration Form - Simplified -->
             <div style="background: var(--bg-card); border: 2px solid var(--cyber-blue); border-radius: var(--radius); padding: 1.5rem; margin-bottom: 1rem;">
@@ -1556,9 +1556,14 @@ document.addEventListener('visibilitychange', function() {
                         🔍 Registration Status Portal
                     </h4>
                     <p style="color: var(--text-secondary); font-size: 0.9rem; margin: 0;">
-                        Enter your email to verify registration status across all hackathons
+                        Enter your email to verify registration status across all hackathons.
+                    </p>
+                    <p style="color: var(--text-secondary); font-size: 0.9rem; margin-top: 0.5rem;">
+                        ✅ If you're registered, you'll see the Discord and GroupMe join links.<br>
+                        ❌ If not, you’ll be prompted to go to <strong>Step 2</strong> to register.
                     </p>
                 </div>
+
 
                 <!-- Registration Form -->
                 <form id="registrationForm" style="display: flex; flex-wrap: wrap; gap: 15px; align-items: center;">
