--- a/index.html
+++ b/index.html
@@ -267,37 +267,37 @@
         </div>
 
         <div class="menu-section">
-            <a href="index.html" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/index.html" class="menu-item">
                 <i class="fas fa-home mr-3"></i>Home
             </a>
-            <a href="index.html#mission" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/index.html#mission" class="menu-item">
                 <i class="fas fa-bullseye mr-3"></i>Mission
             </a>
-            <a href="index.html#events" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/index.html#events" class="menu-item">
                 <i class="fas fa-calendar mr-3"></i>Events
             </a>
             <a href="https://witty-suede-4a1.notion.site/ebd/1fe7f868cc8c8042b1ebfebc42034954" class="menu-item">
                 <i class="fas fa-book mr-3"></i>Wiki
             </a>
-            <a href="hackathons.html" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/hackathons.html" class="menu-item">
                 <i class="fas fa-code mr-3"></i>Hackathons
             </a>
-            <a href="community-access.html" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/community-access.html" class="menu-item">
                 <i class="fas fa-users mr-3"></i>Become a Member
             </a>
-            <a href="all-eboard.html" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/all-eboard.html" class="menu-item">
                 <i class="fas fa-user-tie mr-3"></i>Join Executive Board
             </a>
-            <a href="index.html#resources" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/index.html#resources" class="menu-item">
                 <i class="fas fa-user-friends mr-3"></i>Our Team
             </a>
-            <a href="index.html#resources" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/index.html#resources" class="menu-item">
                 <i class="fas fa-images mr-3"></i>Gallery
             </a>
-            <a href="index.html#resources" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/index.html#resources" class="menu-item">
                 <i class="fas fa-tools mr-3"></i>Resources
             </a>
-            <a href="index.html#connect" class="menu-item">
+            <a href="https://codecrunchglobal.vercel.app/index.html#connect" class="menu-item">
                 <i class="fas fa-link mr-3"></i>Connect
             </a>
             <a href="https://hack-university.vercel.app/" target="_blank" rel="noopener noreferrer" class="menu-item">
@@ -388,10 +388,10 @@
                         An interdisciplinary tech and innovation club empowering students through coding workshops, technical interview prep, and project-based learning. <span class="font-bold">Open to high school students (16+), all majors, and any university.</span>
                     </p>
                     <div class="flex flex-wrap gap-4">
-                        <a href="community-access.html" class="inline-block cc-orange cc-blue-text px-8 py-3 rounded-md hover:bg-yellow-400 transition-colors font-bold">
+                        <a href="https://codecrunchglobal.vercel.app/community-access.html" class="inline-block cc-orange cc-blue-text px-8 py-3 rounded-md hover:bg-yellow-400 transition-colors font-bold">
                             Join Code Crunch
                         </a>
-                        <a href="hackathons.html" class="inline-block bg-transparent border-2 border-white text-white px-8 py-3 rounded-md hover:bg-white hover:text-[#2463EB] transition-colors font-bold">
+                        <a href="https://codecrunchglobal.vercel.app/hackathons.html" class="inline-block bg-transparent border-2 border-white text-white px-8 py-3 rounded-md hover:bg-white hover:text-[#2463EB] transition-colors font-bold">
                             Upcoming Hackathons
                         </a>
                     </div>
@@ -555,12 +555,12 @@
                                     <span class="font-bold">Free Membership.</span>
                                 </p>
                                 <p class="text-sm text-gray-500">
-                                    Questions about membership? Message us on <a href="https://www.linkedin.com/company/code-crunch-club" target="_blank" class="text-blue-600 hover:underline font-medium">LinkedIn</a> or DM us on <a href="community-access.html" class="text-blue-600 hover:underline font-medium">Discord @codecrunchclub</a>
+                                    Questions about membership? Message us on <a href="https://www.linkedin.com/company/code-crunch-club" target="_blank" class="text-blue-600 hover:underline font-medium">LinkedIn</a> or DM us on <a href="https://codecrunchglobal.vercel.app/community-access.html" class="text-blue-600 hover:underline font-medium">Discord @codecrunchclub</a>
                                 </p>
                             </div>
                         </div>
                         <div class="text-center">
-                            <a href="community-access.html" 
+                            <a href="https://codecrunchglobal.vercel.app/community-access.html" 
                                class="inline-block cc-orange cc-blue-text px-8 py-3 rounded-md hover:bg-yellow-400 transition-colors font-bold">
                                 Join Code Crunch Now
                             </a>
@@ -599,7 +599,7 @@
                             </div>
                         </div>
                         
-                        <a href="hackathons.html" target="_blank" rel="noopener noreferrer" class="bg-white text-blue-700 px-6 py-3 rounded-md hover:bg-gray-100 transition-colors font-bold text-center">
+                        <a href="https://codecrunchglobal.vercel.app/hackathons.html" target="_blank" rel="noopener noreferrer" class="bg-white text-blue-700 px-6 py-3 rounded-md hover:bg-gray-100 transition-colors font-bold text-center">
                             Join 7 Hacks Now
                         </a>
                     </div>
@@ -665,7 +665,7 @@
                                 <p class="text-gray-600">Collaborate with students from other majors on real-world problems</p>
                                 <p class="text-gray-600">Technical and non-technical roles available for all participants</p>
                             </div>
-                            <a href="hackathons.html" class="cc-blue text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors font-medium inline-block mt-4">
+                            <a href="https://codecrunchglobal.vercel.app/hackathons.html" class="cc-blue text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors font-medium inline-block mt-4">
                                 Explore All the Hacks
                             </a>
                         </div>
@@ -687,7 +687,7 @@
                     <div class="bg-white p-6 rounded-lg shadow hover:shadow-md transition-shadow">
                         <h3 class="text-xl font-bold mb-3 cc-blue-text">Learning Paths</h3>
                         <p class="text-gray-600 mb-4">Discover guided learning paths for various tech disciplines, from beginner to advanced.</p>
-                        <a href="technical-learning.html" class="text-blue-600 font-medium hover:text-blue-800">
+                        <a href="https://codecrunchglobal.vercel.app/technical-learning.html" class="text-blue-600 font-medium hover:text-blue-800">
                             Explore learning paths <span aria-hidden="true">→</span>
                         </a>
                     </div>
@@ -696,7 +696,7 @@
                     <div class="bg-white p-6 rounded-lg shadow hover:shadow-md transition-shadow">
                         <h3 class="text-xl font-bold mb-3 cc-blue-text">Hackathon Toolkit</h3>
                         <p class="text-gray-600 mb-4">Get templates, starter code, and guides to maximize your hackathon experience.</p>
-                        <a href="hacks-toolkit.html" class="text-blue-600 font-medium hover:text-blue-800">
+                        <a href="https://codecrunchglobal.vercel.app/hacks-toolkit.html" class="text-blue-600 font-medium hover:text-blue-800">
                             Hack toolkit <span aria-hidden="true">→</span>
                         </a>
                     </div>
@@ -790,7 +790,7 @@
                     </div>
                 </div>
                 <div class="mt-8 text-center">
-                    <a href="all-eboard.html" class="cc-blue text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors font-medium">
+                    <a href="https://codecrunchglobal.vercel.app/all-eboard.html" class="cc-blue text-white px-6 py-2 rounded-md hover:bg-blue-700 transition-colors font-medium">
                         View All Executive Board Members
                     </a>
                 </div>
@@ -872,11 +872,11 @@
                                     <i class="fas fa-university text-xl"></i>
                                     <span class="text-xs mt-1 text-center">Panther Connect</span>
                                 </a>
-                                <a href="community-access.html" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://codecrunchglobal.vercel.app/community-access.html" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fab fa-discord text-xl"></i>
                                     <span class="text-xs mt-1">Discord</span>
                                 </a>
-                                <a href="community-access.html" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
+                                <a href="https://codecrunchglobal.vercel.app/community-access.html" class="flex flex-col items-center text-white hover:text-yellow-300 transition duration-200">
                                     <i class="fas fa-users text-xl"></i>
                                     <span class="text-xs mt-1">GroupMe</span>
                                 </a>
@@ -906,14 +906,14 @@
                     <div>
                         <h3 class="text-lg font-bold mb-4">Quick Links</h3>
                         <ul class="space-y-2">
-                            <li><a href="index.html#mission" class="text-sm opacity-80 hover:opacity-100">Mission</a></li>
-                            <li><a href="index.html#events" class="text-sm opacity-80 hover:opacity-100">Events</a></li>
+                            <li><a href="https://codecrunchglobal.vercel.app/index.html#mission" class="text-sm opacity-80 hover:opacity-100">Mission</a></li>
+                            <li><a href="https://codecrunchglobal.vercel.app/index.html#events" class="text-sm opacity-80 hover:opacity-100">Events</a></li>
                             <li><a href="https://ba-00001.github.io/codecrunchclub/hackathons.html" class="text-sm opacity-80 hover:opacity-100">Hackathons</a></li>
-                            <li><a href="community-access.html" class="text-sm opacity-80 hover:opacity-100">Membership</a></li>
+                            <li><a href="https://codecrunchglobal.vercel.app/community-access.html" class="text-sm opacity-80 hover:opacity-100">Membership</a></li>
                             <li><a href="#" class="text-sm opacity-80 hover:opacity-100">Join E-Board</a></li>
-                            <li><a href="index.html#resources" class="text-sm opacity-80 hover:opacity-100">Resources</a></li>
-                            <li><a href="index.html#connect" class="text-sm opacity-80 hover:opacity-100">Connect</a></li>
-                            <li><a href="community-access.html" target="_blank" rel="noopener noreferrer" class="text-sm opacity-80 hover:opacity-100">Join Discord</a></li>
+                            <li><a href="https://codecrunchglobal.vercel.app/index.html#resources" class="text-sm opacity-80 hover:opacity-100">Resources</a></li>
+                            <li><a href="https://codecrunchglobal.vercel.app/index.html#connect" class="text-sm opacity-80 hover:opacity-100">Connect</a></li>
+                            <li><a href="https://codecrunchglobal.vercel.app/community-access.html" target="_blank" rel="noopener noreferrer" class="text-sm opacity-80 hover:opacity-100">Join Discord</a></li>
                         </ul>
                     </div>
                     <div>
