--- a/index-copy.html
+++ b/index-copy.html
@@ -1689,7 +1689,7 @@
 </style>
 
 <script>
-// Your Google Apps Script API URL - Updated with actual deployment ID
+// Your Google Apps Script API URL - Updated with actual deployment ID for membership
 const API_URL = 'https://script.google.com/macros/s/AKfycbwrvOt2fb9A_Gjsg6YiR246akdl_XVF2ai3mrqgCt8JAIezwniR_-GX8SqCWjjUrenLFA/exec';
 
 let currentMemberData = null;
