--- a/index-copy.html
+++ b/index-copy.html
@@ -1690,7 +1690,7 @@
 
 <script>
 // Your Google Apps Script API URL - Updated with actual deployment ID for membership
-https://script.google.com/macros/s/AKfycbycaF4E0QUMaxN7vRCNk99IKkBRPezxTdbUF4Q4Sm0s3bQo-zMhav3qohG9OPnawcrKWQ/exec
+const API_URL = 'https://script.google.com/macros/s/AKfycbycaF4E0QUMaxN7vRCNk99IKkBRPezxTdbUF4Q4Sm0s3bQo-zMhav3qohG9OPnawcrKWQ/exec';
 
 let currentMemberData = null;
 
