--- a/index-copy.html
+++ b/index-copy.html
@@ -1690,7 +1690,8 @@
 
 <script>
 // Your Google Apps Script API URL - Updated with actual deployment ID for membership
-const API_URL = 'https://script.google.com/macros/s/AKfycbwHNny-IdtYJfio0F8bY0ygpme_3ZViNwWsNRVDzx4WrgOgZMiYEdQgw5uBCLaXaqQJXg/exec';
+// Your Google Apps Script API URL - Updated with actual deployment ID for membership
+const API_URL = 'https://script.google.com/macros/s/AKfycbxN7napb1eVLc6kGFd5Zb_pgWYOy-nnNWPvnVo8-rQ3dQB8Jqlck3lRT4ABKxbFHllcqw/exec';
 
 let currentMemberData = null;
 
