--- a/index-copy.html
+++ b/index-copy.html
@@ -865,8 +865,8 @@
 
 
 
-
- <!-- =========================
+  <div class="container">
+    <!-- =========================
        MEMBERSHIP CERTIFICATE GENERATOR
        ========================= -->
     <section class="checklist-section" id="certificate-generator" style="margin-top:3rem;">
@@ -1277,7 +1277,6 @@
     document.getElementById('certificateResult').innerHTML = infoBoxHTML() + '<div class="alert alert-info">Enter your email above to check for your membership certificate...</div>';
   });
   </script>
-
 
 
 
