--- a/z-api-tester.html
+++ b/z-api-tester.html
@@ -82,7 +82,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <h1>🧪 Membership Certificate API Test</h1>
         <p>Use this page to test your membership certificate API and debug any issues.</p>
         
@@ -241,7 +241,7 @@ Stack Trace: ${error.stack}
                 testAPI();
             }
         });
-    </script>
+    </script> -->
 
 
 
