--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     </div>
     
     <div style="margin-bottom: 30px;">
-      <a href="/hack-university-portal" 
+      <a href="index-multipurposetool.html" 
          style="display: inline-flex; align-items: center; gap: 12px; padding: 18px 36px; background: linear-gradient(135deg, #F59E0B 0%, #D97706 100%); color: white; text-decoration: none; border-radius: 50px; font-weight: 700; font-size: 1.1rem; transition: all 0.3s ease; box-shadow: 0 8px 25px rgba(245,158,11,0.3);"
          onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 12px 35px rgba(245,158,11,0.4)'"
          onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 8px 25px rgba(245,158,11,0.3)'">
