--- a/HACK-5-305-HACK-FALL2025.html
+++ b/HACK-5-305-HACK-FALL2025.html
@@ -3370,7 +3370,7 @@ body {
                 
                 <p>This year marks a milestone: <strong>305 Hack is officially hosted by the Google Developer Group (GDG) at FIU</strong>, alongside <strong>Code Crunch Global, Raspberry Pi Code Crunch, and CAHSI @ FIU</strong>.</p>
                 
-                <p>Over three days, students, developers, designers, and entrepreneurs will come together to build transformative projects for the cities of tomorrow. Participants will gain access to <strong>mentorship, workshops, certifications, and global recognition</strong> — all while competing for prizes across <strong>four smart city innovation tracks</strong>:</p>
+                <p>Over three days, students, developers, designers, and entrepreneurs will come together to build transformative projects for the cities of tomorrow. Participants will gain access to <strong>mentorship, workshops, certifications, and global recognition</strong> — all while competing for prizes across <strong>four smart city innovation tracks</strong></p>
             </div>
 
 
