--- a/index-copy.html
+++ b/index-copy.html
@@ -800,57 +800,74 @@ function downloadCertificate() {
 <meta charset="utf-8">
 <title>Hack University Initiative Membership Certificate - ${c.participantName || 'Member'}</title>
 <style>
-@page { size: A4 landscape; margin: 8mm; }
-* { box-sizing: border-box; margin: 0; padding: 0; }
-body { 
-  font-family: "Times New Roman", serif; 
-  background: #f5f5f5; 
+@page { 
+  size: A4 landscape; 
   margin: 0; 
-  padding: 15px; 
+}
+* { 
+  box-sizing: border-box; 
+  margin: 0; 
+  padding: 0; 
+}
+html, body { 
+  width: 100%; 
+  height: 100%; 
+  margin: 0; 
+  padding: 0; 
+  font-family: "Times New Roman", serif; 
+  background: #f8f9fa; 
   line-height: 1.4;
+}
+.screen-container {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  padding: 20px;
+  background: #f8f9fa;
 }
 .container { 
   flex: 1;
   display: flex;
   flex-direction: column;
-  max-width: 1200px; 
+  max-width: 1100px; 
   margin: 0 auto; 
   background: #fff; 
-  padding: 15px; 
-  border-radius: 8px; 
-  box-shadow: 0 4px 20px rgba(0,0,0,0.1); 
+  padding: 20px; 
+  border-radius: 12px; 
+  box-shadow: 0 8px 32px rgba(0,0,0,0.12); 
 }
 .sheet { 
-  flex: 1;
   width: 100%; 
-  min-height: 650px;
+  height: 750px;
   margin: 0 auto; 
   background: #fff; 
-  border: 12px solid #B8860B; 
-  padding: 30px; 
+  border: 15px solid #B8860B; 
+  padding: 40px; 
   position: relative; 
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.header { text-align: center; margin-bottom: 30px; }
+.header { 
+  text-align: center; 
+  margin-bottom: 40px; 
+}
 .title { 
-  font-size: 3.5rem; 
+  font-size: 3.2rem; 
   font-weight: 700; 
-  letter-spacing: 3px; 
-  color: #333; 
-  margin: 0 0 8px; 
+  letter-spacing: 4px; 
+  color: #2c3e50; 
+  margin: 0 0 12px; 
   line-height: 1.1; 
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
 }
 .subtitle { 
-  font-size: 1.1rem; 
+  font-size: 1.2rem; 
   letter-spacing: 3px; 
-  color: #666; 
+  color: #7f8c8d; 
   text-transform: uppercase; 
   margin: 0;
+  font-weight: 500;
 }
 .main-content {
   flex: 1;
@@ -858,71 +875,189 @@ body {
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  padding: 20px 0;
 }
-.presented { font-size: 1rem; font-style: italic; color: #555; margin-bottom: 20px; }
+.presented { 
+  font-size: 1.1rem; 
+  font-style: italic; 
+  color: #5d6d7e; 
+  margin-bottom: 25px; 
+}
 .name { 
-  font-size: 2.8rem; 
+  font-size: 3.0rem; 
   font-weight: 700; 
   font-style: italic; 
-  color: #333; 
-  margin: 20px 0; 
+  color: #2c3e50; 
+  margin: 25px 0; 
   line-height: 1.2;
   word-wrap: break-word;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.1);
 }
 .content { 
-  font-size: 1rem; 
-  line-height: 1.5; 
-  color: #555; 
-  margin: 20px auto; 
+  font-size: 1.1rem; 
+  line-height: 1.6; 
+  color: #5d6d7e; 
+  margin: 25px auto; 
   max-width: 85%; 
 }
 .info { 
-  font-size: 1rem; 
+  font-size: 1.1rem; 
   font-weight: 700; 
-  color: #333; 
-  margin: 20px 0; 
-  line-height: 1.4;
+  color: #34495e; 
+  margin: 25px 0; 
+  line-height: 1.5;
 }
 .footer-section {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-end;
-  margin-top: 30px;
-  min-height: 80px;
+  margin-top: 40px;
+  min-height: 90px;
 }
-.signature-area { text-align: center; flex: 1; max-width: 300px; margin: 0 auto; }
-.sig-line { border-top: 2px solid #333; width: 200px; margin: 0 auto 8px; }
-.sig-name { font-weight: 700; margin-bottom: 2px; font-size: 0.95rem; }
-.sig-title { font-style: italic; color: #666; font-size: 0.85rem; line-height: 1.3; }
+.signature-area { 
+  text-align: center; 
+  max-width: 350px; 
+}
+.sig-line { 
+  border-top: 2px solid #34495e; 
+  width: 250px; 
+  margin: 0 auto 10px; 
+}
+.sig-name { 
+  font-weight: 700; 
+  margin-bottom: 4px; 
+  font-size: 1.0rem;
+  color: #2c3e50;
+}
+.sig-title { 
+  font-style: italic; 
+  color: #7f8c8d; 
+  font-size: 0.9rem; 
+  line-height: 1.4;
+}
 .controls { 
   text-align: center; 
-  margin: 10px 0 15px; 
-  padding: 12px; 
+  margin: 15px 0 20px; 
+  padding: 15px; 
   background: #f8f9fa; 
-  border-radius: 6px; 
+  border-radius: 8px; 
+  border: 1px solid #dee2e6;
 }
 .btn { 
-  padding: 10px 20px; 
-  font-size: 0.95rem; 
+  padding: 12px 24px; 
+  font-size: 1.0rem; 
   cursor: pointer; 
   border: 0; 
-  border-radius: 5px; 
-  margin: 0 8px; 
+  border-radius: 6px; 
+  margin: 0 10px; 
   font-weight: 600; 
   transition: all 0.3s ease; 
 }
-.btn-primary { background: #007bff; color: #fff; }
-.btn-secondary { background: #6c757d; color: #fff; }
-.btn:hover { transform: translateY(-1px); box-shadow: 0 4px 8px rgba(0,0,0,0.2); }
+.btn-primary { 
+  background: #007bff; 
+  color: #fff; 
+}
+.btn-secondary { 
+  background: #6c757d; 
+  color: #fff; 
+}
+.btn:hover { 
+  transform: translateY(-2px); 
+  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+}
 @media print {
-  body { background: #fff !important; padding: 0 !important; margin: 0 !important; }
-  .container { max-width: none !important; padding: 0 !important; box-shadow: none !important; background: #fff !important; }
-  .sheet { 
-    transform: none !important; max-width: none !important; width: 277mm !important; height: 190mm !important; 
-    border: 8mm solid #B8860B !important; padding: 15mm !important; margin: 0 !important; 
-    page-break-inside: avoid !important; min-height: auto !important;
+  html, body { 
+    width: 297mm !important; 
+    height: 210mm !important; 
+    margin: 0 !important; 
+    padding: 0 !important;
+    background: #fff !important;
+    print-color-adjust: exact !important;
+    -webkit-print-color-adjust: exact !important;
   }
-  .controls { display: none !important; }
+  
+  .screen-container {
+    display: none !important;
+  }
+  
+  .container { 
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 297mm !important;
+    height: 210mm !important;
+    max-width: none !important; 
+    padding: 0 !important; 
+    margin: 0 !important;
+    box-shadow: none !important; 
+    background: #fff !important;
+    border-radius: 0 !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+  }
+  
+  .sheet { 
+    width: 277mm !important; 
+    height: 190mm !important; 
+    max-width: 277mm !important;
+    max-height: 190mm !important;
+    border: 10mm solid #B8860B !important; 
+    padding: 20mm !important; 
+    margin: 0 !important; 
+    page-break-inside: avoid !important;
+    page-break-before: auto !important;
+    page-break-after: auto !important;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: space-between !important;
+    background: #fff !important;
+  }
+  
+  .header {
+    margin-bottom: 15mm !important;
+  }
+  
+  .title {
+    font-size: 2.8rem !important;
+    margin-bottom: 8mm !important;
+  }
+  
+  .subtitle {
+    font-size: 1.0rem !important;
+  }
+  
+  .name {
+    font-size: 2.5rem !important;
+    margin: 15mm 0 !important;
+  }
+  
+  .content {
+    font-size: 1.0rem !important;
+    margin: 12mm auto !important;
+  }
+  
+  .info {
+    font-size: 1.0rem !important;
+    margin: 12mm 0 !important;
+  }
+  
+  .footer-section {
+    margin-top: 15mm !important;
+  }
+  
+  .sig-line {
+    width: 200px !important;
+  }
+  
+  .controls { 
+    display: none !important; 
+  }
+  
+  * {
+    print-color-adjust: exact !important;
+    -webkit-print-color-adjust: exact !important;
+  }
 }
 </style>
 </head>
